--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>DashPlayer</title>
   </head>
   <body>
+    <div id="root"></div>
     <script type="module" src="/src/renderer.ts"></script>
   </body>
 </html>
